Core elements (set, animateMotion) in repository 0 added. Repository 0 renamed to overview

--- a/repo.html
+++ b/repo.html
@@ -62,13 +62,13 @@
     <div id="table_of_content">
        <div class="page-header"><h4>TABLE OF CONTENTS</h4></div>
            <ul id="hb_placeholder_01" class="list-group">
-               <li class="list-group-item"><a href="repository/0/">Generic Patterns 0</a>
+               <li class="list-group-item"><a href="repository/overview/index.html">Generic Patterns: Overview</a>
 				   <p class="list-description">Simple SVG patterns and animations.</p>
 			   </li>
-			   <li class="list-group-item"><a href="repository/1/">Generic Patterns 1</a>
+			   <li class="list-group-item"><a href="repository/1/index.html">Generic Patterns 1</a>
 				   <p class="list-description">Simple SVG patterns and animations.</p>
 			   </li>
-			   <li class="list-group-item"><a href="repository/2/">Generic Patterns 2</a>
+			   <li class="list-group-item"><a href="repository/2/index.html">Generic Patterns 2</a>
 				   <p class="list-description">Simple SVG patterns and animations.</p>
 			   </li>
 		   </ul>
