function summary_hbs,canvas_hbs,scripts_hbs(v) in comp.js customized.

--- a/repository/overview/index.html
+++ b/repository/overview/index.html
@@ -114,7 +114,7 @@
 <script data-main="main.js" src="../../lib/require.js"></script>
 
 <!-- <script src="http://sindresorhus.com/screenfull.js/src/screenfull.js"></script> -->
-<script src="../../lib/screenfull.js"></script>
+<script src="../../lib/screenfull.min.js"></script>
 <script src="../../js/conf/scheme.js"></script>
 <script id="hb_placeholder_03"></script>
 
