--- a/repo.html
+++ b/repo.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="A JavaScript library to create parametric animations on the web.">
+<meta name="description" content="A JavaScript library to create parametric patterns on the web.">
 <meta name="keywords" content="HTML, CSS, JS, JavaScript, SVG, Parametric Animations">
 <meta name="author" content="Michael Kuegeler">
 
@@ -19,8 +19,8 @@
 <!-- Custom styles for this template -->
 <link href="css/site.css" rel="stylesheet">
 <!-- Favicons -->
-<link rel="apple-touch-icon-precomposed" href="http://getbootstrap.com/apple-touch-icon-precomposed.png">
-<link rel="icon" href="http://getbootstrap.com/favicon.ico">
+<!-- <link rel="apple-touch-icon-precomposed" href="http://getbootstrap.com/apple-touch-icon-precomposed.png">
+<link rel="icon" href="http://getbootstrap.com/favicon.ico"> -->
 
 <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/styles/zenburn.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/highlight.min.js"></script>
@@ -47,7 +47,8 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">HOME</a></li>
-        <li class="active"><a href="docs/">ABOUT</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+				<li><a href="#">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
         <li><a href="#">DOCS</a></li>
       </ul>
@@ -60,7 +61,7 @@
 <div class="bs-docs-header" id="content">
   <div class="container">
     <div id="table_of_content">
-       <div class="page-header"><h4>TABLE OF CONTENTS</h4></div>
+       <div class="page-header"><h2>Repository</h2></div> 
            <ul id="hb_placeholder_01" class="list-group">
                <li class="list-group-item"><a href="repository/overview/index.html">Generic SVG Elements: Overview</a>
 				   <p class="list-description">Simple SVG patterns and animations.</p>
@@ -91,23 +92,14 @@
 <!-- Footer ========================================================= -->
 <footer class="bs-docs-footer" role="contentinfo">
  <ul class="bs-docs-footer-links muted">
-
-      <li><a href="#">GitHub</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Examples</a></li>
+      <li><a href="https://github.com/mkuegeler/parametric-patterns">GitHub</a></li>
       <li>&middot;</li>
       <li><a href="#">Docs</a></li>
       <li>&middot;</li>
       <li><a href="#">Contact</a></li>
       <li>&middot;</li>
-      <li><a href="#">Legal Notice</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Blog</a></li>
-      <li>&middot;</li>
-      <li><a href="#">English</a></li>
-      <li>&middot;</li>
-      <li><a href="#">German</a></li>
-    </ul>
+      <li><a href="#">Legal Notice</a></li>      
+ </ul>
 </div>
 </footer>
 <footer class="bs-docs-footer-copyright">© Copyright 2015 Medigeist</footer>
