--- a/repository/overview/index.html
+++ b/repository/overview/index.html
@@ -24,10 +24,19 @@
 <!-- <link rel="apple-touch-icon-precomposed" href="http://getbootstrap.com/apple-touch-icon-precomposed.png">
 <link rel="icon" href="http://getbootstrap.com/favicon.ico"> -->
 
-<!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/styles/zenburn.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>	 -->
+<!-- Using highlight.js for code -->
+<!--  
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>	 -->  
 
+<!-- Using Google Code Prettify for code --> 
+<!--    
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>  -->
+
+<!-- Using Google Fonts. Add to body css: font-family: 'Ubuntu', sans-serif; -->  
+<!--  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">  -->
+  
 </head>
 <!-- html Head ====================================================== -->
 <body id="body">
@@ -49,7 +58,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">HOME</a></li>
-        <li class="active"><a href="/repo.html">REPOSITORY</a></li>
+        <li><a href="/repo.html">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
         <li><a href="#">DOWNLOAD</a></li>
       </ul>
@@ -62,7 +71,7 @@
 <div class="bs-docs-header" id="content">
   <div class="container">
     <div id="table_of_content">
-       <div class="page-header"><h4>TABLE OF CONTENTS</h4></div>
+       <div class="page-header"><h2>Table of Contents</h2></div>
            <ul id="hb_placeholder_01" class="list-group"></ul>
        </div>
     </div>
