--- a/repository/patterns/index.html
+++ b/repository/patterns/index.html
@@ -49,7 +49,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/">HOME</a></li>
-        <li class="active"><a href="/repo.html">REPOSITORY</a></li>
+        <li><a href="/repo.html">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
         <li><a href="#">DOWNLOAD</a></li>
       </ul>
@@ -62,7 +62,7 @@
 <div class="bs-docs-header" id="content">
   <div class="container">
     <div id="table_of_content">
-       <div class="page-header"><h4>TABLE OF CONTENTS</h4></div>
+       <div class="page-header"><h2>Table of Contents</h2></div>
            <ul id="hb_placeholder_01" class="list-group"></ul>
        </div>
     </div>
