--- a/repository/patterns/index.html
+++ b/repository/patterns/index.html
@@ -62,7 +62,7 @@
 <div class="bs-docs-header" id="content">
   <div class="container">
     <div id="table_of_content">
-       <div class="page-header"><h2>Table of Contents</h2></div>
+       <div class="page-header"><h3>Content</h3></div>
            <ul id="hb_placeholder_01" class="list-group"></ul>
        </div>
     </div>
