--- a/repo.html
+++ b/repo.html
@@ -50,7 +50,7 @@
         <li><a href="about.html">ABOUT</a></li>
 				<li><a href="#">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
-        <li><a href="#">DOCS</a></li>
+        <li><a href="https://github.com/mkuegeler/parametric-patterns">GITHUB</a></li>
       </ul>
     </nav>
   </div>
@@ -85,24 +85,17 @@
 </div>
 <!-- svg area -->
 <div id="hb_placeholder_02" class="container"></div>
-<!-- svg area -->
-
+<!-- svg area -->	
 <!-- Page content  ================================================== -->
 
 <!-- Footer ========================================================= -->
 <footer class="bs-docs-footer" role="contentinfo">
- <ul class="bs-docs-footer-links muted">
-      <li><a href="https://github.com/mkuegeler/parametric-patterns">GitHub</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Docs</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Contact</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Legal Notice</a></li>      
+ <ul class="bs-docs-footer-links muted">      
+      <li><a href="https://twitter.com/mkuegeler">Contact</a></li>     
  </ul>
 </div>
 </footer>
-<footer class="bs-docs-footer-copyright">© Copyright 2015 Medigeist</footer>
+<footer class="bs-docs-footer-copyright">© Copyright 2016 Medigeist</footer>
 <!-- Footer ======================================================== -->
 
 <!-- JavaScript Recources ========================================== -->
@@ -116,10 +109,7 @@
 <!-- <script src="http://getbootstrap.com/assets/js/docs.min.js"></script> -->
 
 
-
 <!-- JavaScript Recources ========================================= -->
-
-
 
 </body>
 </html>
