--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <li><a href="#">ABOUT</a></li>
 				<li><a href="repo.html">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
-        <li><a href="#">DOCS</a></li>
+        <li><a href="https://github.com/mkuegeler/parametric-patterns">GITHUB</a></li>
       </ul>
     </nav>
   </div>
@@ -64,18 +64,7 @@
        <div class="page-header"><h3>About</h3></div>
           <span class="txt">
             Medigeist is a design environment, in which you can create parametric SVG documents based on the Document Object Model (DOM) as the programming interface in your web browser. 
-            <br/>The DOM is used as the engine to generate plain SVG which can be saved as a file ready for external procession.
-            It runs solely on client site, no server-side scripting is required. This makes it easy to deploy and let you run Medigeist on different platforms. <br/> 
-						A parametric SVG document can be a diagram, a process model, a technical draft, flow charts, a ground plan, an animation or just a composition of geometrical forms. 
-The design of more complex graphical documents with regard to layout constraints and formal dependencies can be a tideous job by using common drawing applications. 
-						It's easy to draw a circle and assign style attributes but if you want to arrange a set of circles in a particular order or need to define dependencies between forms, 
-						for instance to run a sophisticated animation, your work becomes more complex and difficult to handle.<br/> Dealing with plain SVG code is not in favour of many people, 
-						so another approach is scripting. Scripting allows you to define reusable documents, for instance a complex layout such as a process diagram with specific parameters 
-						as a template for new layouts.
-However, if you want to share your work in external applications or just embed it as an image on a web site, 
-						the extensive use of javascript can be an issue. Your work is less deployable with javascript, 
-						let alone security issues to be taken into account.<br/> A solution could be to tranform the scripted 
-						work back into script-free SVG which can be processed by almost all modern SVG-capable web browsers and applications alike. 
+            The DOM is used as the engine to generate plain SVG.<br/>A parametric SVG document can be a diagram, a process model, a technical draft, flow charts, a ground plan, an animation or just a composition of geometrical forms. 
       </span>
        </div>
     </div>
@@ -88,18 +77,12 @@ However, if you want to share your work in external applications or just embed i
 
 <!-- Footer ========================================================= -->
 <footer class="bs-docs-footer" role="contentinfo">
- <ul class="bs-docs-footer-links muted">
-      <li><a href="https://github.com/mkuegeler/parametric-patterns">GitHub</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Docs</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Contact</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Legal Notice</a></li>      
+ <ul class="bs-docs-footer-links muted">      
+      <li><a href="https://twitter.com/mkuegeler">Contact</a></li>     
  </ul>
 </div>
 </footer>
-<footer class="bs-docs-footer-copyright">© Copyright 2015 Medigeist</footer>
+<footer class="bs-docs-footer-copyright">© Copyright 2016 Medigeist</footer>
 <!-- Footer ======================================================== -->
 
 <!-- JavaScript Recources ========================================== -->
