--- a/repository/patterns/index.html
+++ b/repository/patterns/index.html
@@ -51,7 +51,7 @@
         <li><a href="/">HOME</a></li>
         <li><a href="/repo.html">REPOSITORY</a></li>
         <!-- <li><a href="sample.html">SAMPLE</a></li> -->
-        <li><a href="#">DOWNLOAD</a></li>
+        <li><a href="https://github.com/mkuegeler/parametric-patterns">GITHUB</a></li>
       </ul>
     </nav>
   </div>
@@ -75,27 +75,12 @@
 
 <!-- Footer ========================================================= -->
 <footer class="bs-docs-footer" role="contentinfo">
- <ul class="bs-docs-footer-links muted">
-
-      <li><a href="#">GitHub</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Examples</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Docs</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Contact</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Legal Notice</a></li>
-      <li>&middot;</li>
-      <li><a href="#">Blog</a></li>
-      <li>&middot;</li>
-      <li><a href="#">English</a></li>
-      <li>&middot;</li>
-      <li><a href="#">German</a></li>
-    </ul>
+ <ul class="bs-docs-footer-links muted">      
+      <li><a href="https://twitter.com/mkuegeler">Contact</a></li>     
+ </ul>
 </div>
 </footer>
-<footer class="bs-docs-footer-copyright">© Copyright 2015 Medigeist</footer>
+<footer class="bs-docs-footer-copyright">© Copyright 2016 Medigeist</footer>
 <!-- Footer ======================================================== -->
 
 <!-- JavaScript Recources ========================================== -->
