--- a/about.html
+++ b/about.html
@@ -64,7 +64,9 @@
        <div class="page-header"><h3>About</h3></div>
           <span class="txt">
             Medigeist is a design environment, in which you can create parametric SVG documents based on the Document Object Model (DOM) as the programming interface in your web browser. 
-            The DOM is used as the engine to generate plain SVG.<br/>A parametric SVG document can be a diagram, a process model, a technical draft, flow charts, a ground plan, an animation or just a composition of geometrical forms. 
+            The DOM is used as the engine to generate plain SVG.<br/>A parametric SVG document can be a diagram, a process model, 
+						a technical draft, flow charts, a ground plan, an animation or just a composition of geometrical forms.<br/>
+						Medigeist tries to simplify the parametric programming of SVG geometries. 
       </span>
        </div>
     </div>
