function abstractGrid in funct.js applied.

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 <!-- Footer ========================================================= -->
 <footer class="bs-docs-footer" role="contentinfo">
  <ul class="bs-docs-footer-links muted">      
-      <li><a href="https://twitter.com/mkuegeler">Contact</a></li>     
+      <li><a href="mailto:contact@medigeist.com">Contact</a></li>     
  </ul>
 </div>
 </footer>
